FIX: open pic in wx to jump to msg position

--- a/css/tree.css
+++ b/css/tree.css
@@ -997,3 +997,6 @@ body .dialog-content, .dialog-background{
 	top: auto!important;
 }
 
+body.openMsg{
+	overflow: hidden;
+}
